// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the App component 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onStartShouldSetResponderCapture={[Function]}
      pointerEvents="auto"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
              Object {
                "scaleX": 1,
              },
              Object {
                "scaleY": 1,
              },
              Object {
                "rotate": "0deg",
              },
              Object {
                "skewX": "0deg",
              },
              Object {
                "skewY": "0deg",
              },
            ],
          },
          null,
        ]
      }
    >
      <View>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Awale
          </Text>
        </View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 30,
              }
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={
                Array [
                  "button",
                ]
              }
              accessible={true}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#0C42FD",
                        "fontSize": 18,
                        "padding": 8,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Play against computer
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginBottom": 30,
              }
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityLabel={undefined}
              accessibilityTraits={
                Array [
                  "button",
                ]
              }
              accessible={true}
              hitSlop={undefined}
              isTVSelectable={true}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#0C42FD",
                        "fontSize": 18,
                        "padding": 8,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Play against another player
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders the Board component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "steelblue",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "height": 150,
      "justifyContent": "space-around",
      "padding": 20,
      "width": 350,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "marginLeft": 10,
          "marginTop": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 40,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 20,
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 20,
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 20,
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 20,
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 20,
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 20,
        "height": 40,
        "marginLeft": 10,
        "marginTop": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 40,
      }
    }
  >
    4
  </Text>
</View>
`;

exports[`renders the Play component 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#0C42FD",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Back to home
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={Object {}}
      >
        Score : 
        0
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "steelblue",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 150,
          "justifyContent": "space-around",
          "padding": 20,
          "width": 350,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "red",
              "borderRadius": 20,
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "orange",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "red",
              "borderRadius": 20,
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "orange",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "red",
              "borderRadius": 20,
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "orange",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "red",
              "borderRadius": 20,
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "orange",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "red",
              "borderRadius": 20,
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "orange",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "red",
              "borderRadius": 20,
              "height": 40,
              "marginLeft": 10,
              "marginTop": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "orange",
            },
          ]
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 20,
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 20,
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 20,
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 20,
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 20,
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 20,
            "height": 40,
            "marginLeft": 10,
            "marginTop": 10,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 40,
          }
        }
      >
        4
      </Text>
    </View>
  </View>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "red",
          }
        }
      >
        Score : 
        0
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders the Welcome component 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Awale
    </Text>
  </View>
  <View>
    <View
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#0C42FD",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Play against computer
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 30,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#0C42FD",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Play against another player
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
